# chorebot

./: .dir-locals.el  .travis.yml  CONTRIBUTING.org  Main.hs  README.org  cabal-configure-static.sh  chorebot.cabal  default.nix  shell.nix
spec/: SpecHelper.hs
spec/Chorebot/: DistributorSpec.hs  ProfileSpec.hs  TimeSpec.hs
spec/Chorebot/Doer/: ParserSpec.hs
spec/fixtures/: assignment-history.txt  chores.txt  doers.txt
src/: Assignment.hs  AssignmentParser.hs  Chore.hs  ChoreParser.hs  Doer.hs  DoerParser.hs  Main.hs  ParserCommon.hs  TimeCommon.hs
src/Chorebot/: Assignment.hs  Chore.hs  Distributor.hs  Doer.hs  ParserHelper.hs  Profile.hs  Time.hs  Tribunal.hs
src/Chorebot/Assignment/: Parser.hs
src/Chorebot/Chore/: Parser.hs
src/Chorebot/Doer/: Parser.hs
