name:                chorebot
version:             0.1.0.0
synopsis:            A bot to distribute chores.
license:             GPL-2
license-file:        LICENSE
author:              Michael Hoy
maintainer:          mjh@mjhoy.com
category:            Shared living
build-type:          Simple
cabal-version:       >=1.10


executable chorebot
  main-is:             Main.hs
  hs-source-dirs:      src
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base   >=4.8   && <4.9,
                       parsec >=3.1.9 && <3.2,
                       directory,
                       time,
                       extra,
                       containers,
                       regex-compat,
                       random
  default-language:    Haskell2010

