name:                chorebot
version:             0.1.0.0
synopsis:            A bot to distribute chores.
license:             GPL-2
license-file:        LICENSE
author:              Michael Hoy
maintainer:          mjh@mjhoy.com
category:            Shared living
build-type:          Simple
cabal-version:       >=1.10
data-dir:            spec/fixtures
data-files:          doers.txt, chores.txt, assignment-history.txt

-- while it makes more sense to break out a chorebot library, and add
-- it as a dependency for both an executable and a test-suite, this
-- seems to cause trouble with building a static binary which for now
-- is a requirement. this means build-depends must be duplicated
-- between the executable and the test-suite.

executable chorebot
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       Chorebot.Assignment
                     , Chorebot.Assignment.Parser
                     , Chorebot.Chore
                     , Chorebot.Chore.Parser
                     , Chorebot.Distributor
                     , Chorebot.Doer
                     , Chorebot.Doer.Parser
                     , Chorebot.ParserHelper
                     , Chorebot.Profile
                     , Chorebot.Time
                     , Chorebot.Tribunal
  -- other-extensions:    
  build-depends:       base   >=4.7   && <4.9

                       -- chorebot dependencies
                     , parsec >=3.1.9 && <3.2
                     , directory
                     , time
                     , extra
                     , containers
                     , regex-compat
                     , random
                     , optparse-applicative
                     , MonadRandom
                     , mtl

  default-language:    Haskell2010

test-suite spec
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      spec, src
  other-modules:       Paths_chorebot
                     , Chorebot.Assignment
                     , Chorebot.Assignment.Parser
                     , Chorebot.Chore
                     , Chorebot.Chore.Parser
                     , Chorebot.Distributor
                     , Chorebot.Doer
                     , Chorebot.Doer.Parser
                     , Chorebot.ParserHelper
                     , Chorebot.Profile
                     , Chorebot.Time
                     , Chorebot.Tribunal
                     , Chorebot.DistributorSpec
                     , Chorebot.Doer.ParserSpec
                     , Chorebot.ProfileSpec
                     , Chorebot.TimeSpec
                     , SpecHelper
  build-depends:       base   >=4.7   && <4.9

                       -- test dependencies
                     , hspec

                       -- chorebot dependencies
                     , parsec >=3.1.9 && <3.2
                     , directory
                     , time
                     , extra
                     , containers
                     , regex-compat
                     , random
                     , optparse-applicative
                     , MonadRandom
                     , mtl
